k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvop-srv-consult-product
spec:
  selector:
    app: dvop-srv-consult-product
  ports:
  - port: 8082
    targetPort: 8082
