k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvop-srv-consult-product
  labels:
    name: dvop-srv-consult-product
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dvop-srv-consult-product
            port:
              number: 8082
